service.yml
apiVersion: v1
kind: Service
metadata:
  name: fullstackharwin
  namespace: production
spec:
  selector:
    app: fullstackharwin
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
