ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstackharwin
  namespace: production
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: fsl-challenge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fullstackharwin
            port:
              number: 8080
